openpearl-code/testsuite/must_not_compile/00_basics/030_spc_ident_noname.prl
MODULE(m1);

PROBLEM;
   ! must fail -- missing identifier and brace
   SPC x FIXED IDENT;

END;
MODEND;
